src/main/java/com/example/sb_assign_16_05_23/errors/ErrorResponse.java
package com.example.sb_assign_16_05_23.errors;


import lombok.AllArgsConstructor;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.http.HttpStatus;

@Data
@NoArgsConstructor
@AllArgsConstructor
public class ErrorResponse {
    private HttpStatus status;
    private String message;
}
